[package]
name = "rtop_dev"
version = "0.1.2"
edition = "2021"
description = "Development librairy for creating pluign for RtopRS"
repository = "https://github.com/RTopRS/RtopDev"
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
